# ILN-Smart-Contract

contracts/invoice_liquidity/: Cargo.toml
contracts/invoice_liquidity/src/: config.rs  errors.rs  events.rs  invoice.rs  lib.rs  storage.rs  test.rs  tests_appeal.rs  tests_auth.rs  tests_benchmarks.rs  tests_concurrency.rs  tests_discount_rate.rs  tests_lp_pagination.rs  tests_lp_priority_queue.rs  tests_multi_token.rs  tests_mutation.rs  tests_new_features.rs  tests_pagination.rs  tests_partial_payment.rs  tests_regression.rs  tests_security.rs  tests_state_machine.rs  tests_storage.rs  tests_storage_extra.rs  tests_token_registry.rs  tests_xlm_support.rs
contracts/invoice_liquidity/test_snapshots/: cannot_cancel_funded_invoice.1.json
contracts/invoice_liquidity/test_snapshots/test/: test_claim_default_non_funder_fails.1.json  test_claim_default_on_paid_invoice_fails.1.json  test_claim_default_success.1.json  test_expire_pending_invoice_after_due_date.1.json  test_expire_pending_invoice_before_due_date_fails.1.json  test_full_lifecycle_payer_balance_reduces_correctly.1.json  test_fund_already_funded_invoice_fails.1.json  test_fund_expired_invoice_fails.1.json  test_fund_invoice_transfers_correct_amounts.1.json  test_mark_paid_releases_full_amount_to_lp.1.json  test_mark_paid_updates_status.1.json  test_payer_with_default.1.json  test_reputation_decay_activity_resets.1.json  test_reputation_decay_inactive_score.1.json  test_reputation_no_decay_when_inactive.1.json  test_reputation_score_never_goes_below_zero.1.json  test_submit_invoice_returns_id.1.json  (+9 more)
(+171 files in other folders)
